Add code for creating a viertual interface and replying to arp request

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 pnet_packet = "0.35.0"
 pnet_datalink = "0.35.0"
 pnet_base = "0.35.0"
+nix = { version = "0.29", features = ["net"] }
